1.19 and Cross server update